# mipsy-editor-features

./: .gitignore  .vscodeignore  Cargo.toml  README.md  generate_syntax.py  icon.html  language-configuration.json  package-lock.json  package.json  test.s  tsconfig.json
mipsy_vscode/: Cargo.toml
mipsy_vscode/src/: lib.rs  utils.rs
src/: decompileView.ts  extension.ts  ioView.html  ioViewProvider.ts  launchDebug.ts  lspClient.ts  lsp_data.json  memoryPanel.html  memoryViewer.ts  memoryWebview.ts  mipsDebugAdapter.ts  scanBuffer.ts  server.ts  test.py
vim-out/: mips.vim  mipsy-lsp.sh  mipsy.lua
