[package]
name = "mipsy_vscode"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
mipsy_parser = { path = "../mipsy/crates/mipsy_parser" }
mipsy_lib = { path = "../mipsy/crates/mipsy_lib" }
mipsy_utils = { path = "../mipsy/crates/mipsy_utils" }
mipsy_instructions = { path = "../mipsy/crates/mipsy_instructions", features = ["rt_yaml"] }

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2.63" }

console_error_panic_hook = { version = "0.1.6", optional = true }

wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
# debug = true
